--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,10 @@
 # Site settings
 title: Lobster
-author: Matthias Wolf, Anna Woodard
-email: mwolf3@nd.edu, awoodard@nd.edu
+authors:
+  - name: Matthias Wolf
+    email: mwolf3@nd.edu
+  - name: Anna Woodard
+    email: awoodard@nd.edu
 description: > # this means to ignore newlines until "baseurl:"
   Lobster is a user tool to run workflows requiring CMS infrastructure at a
   large scale at non-WLCG sites.
