--- a/examples/slim_file_interface.yaml
+++ b/examples/slim_file_interface.yaml
@@ -51,6 +51,13 @@ delete merged: true
 ## overwrite the username to use for publishing, in case it is different from the environment var $USER
 # publish user: username
 
+## Retry accessing files only 10 times.  Requires CMSSW to be set up to
+## skip input files when not accessible.
+# threshold for skipping: 10
+## Quit retrying jobits after 11 times.  After 10 failures, jobits are run
+## once isolated by themselves.
+# threshold for failure: 10
+
 # advanced:
   ## start killing jobs with excessive runtimes after this many successful
   ## jobs
@@ -86,6 +93,12 @@ delete merged: true
 ##              publish label (string): label to include in the published dataset name
 ##              output format (string): optional renaming of files, based on their basename and extension
 ##                                      for example, "this_is_file_{id}_{base}.{ext}"
+##              task runtime (int): seconds of task runtime.  CMSSW (7_4_X
+##                                  or greater) will run for an addiotional
+##                                  10 minutes, and after further 15
+##                                  minutes, tasks will be killed.  Lobster
+##                                  will try to adjust jobits per tasks to
+##                                  match the desired runtime.
 
 ## Set task default, applied to all tasks specified below, unless they
 ## override certain options.
