--- a/examples/mc_production.yaml
+++ b/examples/mc_production.yaml
@@ -50,6 +50,13 @@ delete merged: true
 ## overwrite the username to use for publishing, in case it is different from the environment var $USER
 # publish user: username
 
+## Retry accessing files only 10 times.  Requires CMSSW to be set up to
+## skip input files when not accessible.
+# threshold for skipping: 10
+## Quit retrying jobits after 11 times.  After 10 failures, jobits are run
+## once isolated by themselves.
+# threshold for failure: 10
+
 advanced:
   ## start killing jobs with excessive runtimes after this many successful
   ## jobs
