--- a/examples/slim_dbs.yaml
+++ b/examples/slim_dbs.yaml
@@ -48,6 +48,13 @@ delete merged: true
 ## overwrite the username to use for publishing, in case it is different from the environment var $USER
 # publish user: username
 
+## Retry accessing files only 10 times.  Requires CMSSW to be set up to
+## skip input files when not accessible.
+# threshold for skipping: 10
+## Quit retrying jobits after 11 times.  After 10 failures, jobits are run
+## once isolated by themselves.
+# threshold for failure: 10
+
 # advanced:
   ## start killing jobs with excessive runtimes after this many successful
   ## jobs
@@ -87,6 +94,12 @@ delete merged: true
 ##                      for.  Two grace periods are applied: 10 minutes for
 ##                      CMSSW to stop processing (only 7_4_X and higher),
 ##                      and 15 additional minutes until the task is killed.
+##              task runtime (int): seconds of task runtime.  CMSSW (7_4_X
+##                                  or greater) will run for an addiotional
+##                                  10 minutes, and after further 15
+##                                  minutes, tasks will be killed.  Lobster
+##                                  will try to adjust jobits per tasks to
+##                                  match the desired runtime.
 
 ## Set task default, applied to all tasks specified below, unless they
 ## override certain options.
