--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,9 @@ language: python
 python:
   - "2.7"
 install:
-  - pip install .
   - ./install_dependencies.sh
+  - python setup.py install
+before_script:
+  - uname -a
 script:
   - nosetests
