Comment out debug line.

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ python:
 install:
   - ./install_dependencies.sh
   - python setup.py install
-before_script:
-  - uname -a
+# before_script:
+#   - uname -a
 script:
   - nosetests
