--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python:
   - "2.7"
 install:
   - ./install_dependencies.sh
-  - python setup.py install
+  - pip install .
 # before_script:
 #   - uname -a
 script:
