--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ python:
   - "2.7"
 install:
   - ./install_dependencies.sh
+  - pip install matplotlib
+  - pip install numpy
   - pip install .
 # before_script:
 #   - uname -a
