Attempt to build cctools.

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: python
 python:
   - "2.7"
 install:
-  - ./install_dependencies.sh
+  - BUILD_CCTOOLS=1 ./install_dependencies.sh
   - pip install .
 # before_script:
 #   - uname -a
