--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,10 @@ python:
 install:
   - BUILD_CCTOOLS=1 ./install_dependencies.sh
   - pip install .
-# before_script:
-#   - uname -a
+before_script:
+  - export LOBSTER_STORAGE=./test_storage/
+  - export LOBSTER_SKIP_HADOOP=1
+  - export LOBSTER_SKIP_SRM=1
 script:
   - nosetests
 addons:
