--- a/examples/slim_dbs.yaml
+++ b/examples/slim_dbs.yaml
@@ -4,9 +4,12 @@ workdir: <your working directory here>
 plotdir: <your plotting directory here>
 
 storage:
+    shuffle inputs: false              # default is false
     shuffle outputs: false             # default is false
+    use work queue for inputs: false   # default is false
     use work queue for outputs: false  # default is false
     disable input streaming: false     # default is false
+    disable stage-in acceleration: false # default is false
 
     ## example settings for storing output at ND
     output:
