--- a/examples/slim_file_interface.yaml
+++ b/examples/slim_file_interface.yaml
@@ -9,6 +9,7 @@ storage:
     use work queue for inputs: false   # default is false
     use work queue for outputs: false  # default is false
     disable input streaming: false     # default is false
+    disable stage-in acceleration: false # default is false
 
     ## example settings for reading from/writing to ND
     input:
