--- a/examples/custom_command.yaml
+++ b/examples/custom_command.yaml
@@ -25,7 +25,7 @@ use dashboard: true
 ## Retry accessing files only 10 times.  Requires CMSSW to be set up to
 ## skip input files when not accessible.
 # threshold for skipping: 10
-## Quit retrying jobits after 11 times.  After 10 failures, jobits are run
+## Quit retrying units after 11 times.  After 10 failures, units are run
 ## once isolated by themselves.
 # threshold for failure: 10
 
@@ -68,7 +68,7 @@ use dashboard: true
 ##                                  or greater) will run for an addiotional
 ##                                  10 minutes, and after further 15
 ##                                  minutes, tasks will be killed.  Lobster
-##                                  will try to adjust jobits per tasks to
+##                                  will try to adjust units per tasks to
 ##                                  match the desired runtime.
 
 tasks:
