Change jobs → tasks, in partial fulfillment of #133.

--- a/examples/mc_production.yaml
+++ b/examples/mc_production.yaml
@@ -27,7 +27,7 @@ storage:
     #   - "root://xrootd-cms.infn.it//store/user/<user>/<output directory>"
 
 
-## report jobs to the CMS dashboard (default is true)
+## report tasks to the CMS dashboard (default is true)
 use dashboard: true
 
 ## merge output files to this size
@@ -36,7 +36,7 @@ merge size: 3.5G
 ## delete intermediate files after merging (default is true)
 delete merged: true
 
-## optional: if a job exits with a code in this list, the host it ran on will be blacklisted
+## optional: if a task exits with a code in this list, the host it ran on will be blacklisted
 # bad exit codes: [1, 2]
 
 ## path to CMSSW release needed to run executable (default read from $LOCALRT)
@@ -62,8 +62,8 @@ delete merged: true
 # threshold for failure: 10
 
 advanced:
-  ## start killing jobs with excessive runtimes after this many successful
-  ## jobs
+  ## start killing tasks with excessive runtimes after this many successful
+  ## tasks
   abort threshold: 10
   ## define excessive runtime in multiples of the average runtime
   # abort multiplier: 4
@@ -71,7 +71,7 @@ advanced:
   # renew proxy: false
   ## level of verbosity.  Everything is 1, only critical messages is 5, default 2
   log level: 0
-  ## how many jobs to create and keep in the queue
+  ## how many tasks to create and keep in the queue
   # payload: 400
 
 task defaults:
@@ -81,9 +81,9 @@ task defaults:
     ## optional renaming of files, based on their basename and extension:
     # output format: "this_is_file_{id}_{base}.{ext}"
     publish label: 'test'
-    ## default job size
-    # lumis per job: 25
+    ## default task size
+    # lumis per task: 25
 
 tasks:
-  - {label: minbias, events per job: 225, num jobs: 10000}
+  - {label: minbias, events per task: 225, num tasks: 10000}
 
