--- a/examples/custom_command.yaml
+++ b/examples/custom_command.yaml
@@ -13,10 +13,10 @@ storage:
     output:
       - file:///tmp/lobster_example
 
-## report jobs to the CMS dashboard (default is true)
+## report tasks to the CMS dashboard (default is true)
 use dashboard: true
 
-## optional: if a job exits with a code in this list, the host it ran on will be blacklisted
+## optional: if a task exits with a code in this list, the host it ran on will be blacklisted
 # bad exit codes: [1, 2]
 
 ## optional: specify directories in CMSSW work area to omit from sandbox
@@ -30,8 +30,8 @@ use dashboard: true
 # threshold for failure: 10
 
 # advanced:
-  ## start killing jobs with excessive runtimes after this many successful
-  ## jobs
+  ## start killing tasks with excessive runtimes after this many successful
+  ## tasks
   # abort threshold: 10
   ## define excessive runtime in multiples of the average runtime
   # abort multiplier: 4
@@ -41,7 +41,7 @@ use dashboard: true
   # renew proxy: false
   ## level of verbosity.  Everything is 1, only critical messages is 5, default 2
   # log level: 0
-  ## how many jobs to create and keep in the queue
+  ## how many tasks to create and keep in the queue
   # payload: 400
 
 ## task fields:
@@ -56,11 +56,11 @@ use dashboard: true
 ##                      dataset (string): DBS dataset name of input files to run over
 ##                      files (string): path to input files (wildcards accepted)
 ##              one of:
-##                      events per job (int): number of events to process per job
-##                      lumis per job (int): lumis to process per job (default: 25)
+##                      events per task (int): number of events to process per task
+##                      lumis per task (int): lumis to process per task (default: 25)
 ##              lumi mask (string): path to lumi mask to apply
 ##              parameters (list of strings): parameters to pass to cmsRun
-##              extra inputs (list of strings): extra files needed to run the job
+##              extra inputs (list of strings): extra files needed to run the task
 ##              publish label (string): label to include in the published dataset name
 ##              output format (string): optional renaming of files, based on their basename and extension
 ##                                      for example, "this_is_file_{id}_{base}.{ext}"
