Move matplotlib dependency to travis.
Since we require to be within a cms environment, make sure that pip does
not attempt to install matplotlib.

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ python:
   - "2.7"
 install:
   - BUILD_CCTOOLS=1 ./install_dependencies.sh
+  - pip install matplotlib
   - pip install .
 before_script:
   - export LOBSTER_STORAGE=$PWD/test_storage/
