--- a/lobster/monitor/elk/data/vis/[template]-Tasks-links.json
+++ b/lobster/monitor/elk/data/vis/[template]-Tasks-links.json
@@ -3,8 +3,8 @@
     "kibanaSavedObjectMeta": {
         "searchSourceJSON": "{\"query\":{\"query_string\":{\"analyze_wildcard\":true,\"query\":\"*\"}},\"filter\":[]}"
     }, 
-    "title": "[template] Core category filters", 
+    "title": "[template] Tasks links", 
     "uiStateJSON": "{}", 
     "version": 1, 
-    "visState": "{\"aggs\": [], \"listeners\": {}, \"params\": {\"markdown\": \"text goes here\"}, \"title\": \"[template] Core category filters\", \"type\": \"markdown\"}"
+    "visState": "{\"aggs\": [], \"listeners\": {}, \"params\": {\"markdown\": \"text goes here\"}, \"title\": \"[template] Tasks links\", \"type\": \"markdown\"}"
 }
