Add the actual testing package.

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ python:
 install:
   - BUILD_CCTOOLS=1 ./install_dependencies.sh
   - pip install matplotlib
+  - pip install flake8
   - pip install .
 before_script:
   - export LOBSTER_STORAGE=$PWD/test_storage/
