--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,11 @@ before_script:
   - export LOBSTER_STORAGE=$PWD/test_storage/
   - export LOBSTER_SKIP_HADOOP=1
   - export LOBSTER_SKIP_SRM=1
+env:
+  - TESTCOMMAND="flake8 ."
+  - TESTCOMMAND=nosetests
 script:
-  - nosetests
-  - flake8 lobster
+  - $TESTCOMMAND
 addons:
   apt:
     packages:
