Exclude non-code dirs from Travis flake8 check
Also: more changes to make flake8 happy.

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_script:
   - export LOBSTER_SKIP_HADOOP=1
   - export LOBSTER_SKIP_SRM=1
 env:
-  - TESTCOMMAND="flake8 ."
+  - TESTCOMMAND="flake8 --exclude=.git,cctools-ndcms_mid2016_scale_run ."
   - TESTCOMMAND=nosetests
 script:
   - $TESTCOMMAND
