Add pycurl to travis dependencies.

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ install:
   - BUILD_CCTOOLS=1 ./install_dependencies.sh
   - pip install matplotlib
   - pip install flake8
+  - pip install pycurl
   - pip install .
 before_script:
   - export LOBSTER_STORAGE=$PWD/test_storage/
