--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ install:
   - pip install matplotlib
   - pip install flake8
   - pip install pycurl
+  - pip install mock
   - pip install .
 before_script:
   - export LOBSTER_STORAGE=$PWD/test_storage/
